# Openlive

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  THIRD_PARTY_NOTICES.md  implementation_plan.md
apps/openlive-desktop/: Cargo.toml  README.md  build.rs  tauri.conf.json
apps/openlive-desktop/icons/: icon.icns
apps/openlive-desktop/src/: main.rs
apps/openlive-gateway/: Cargo.toml
apps/openlive-gateway/data/openlive-sessions/306e7186-4192-4bec-bc74-3e05214dd8b9/: events.jsonl  tasks.jsonl
apps/openlive-gateway/data/openlive-sessions/36e04f3a-dcdf-49f6-8e70-c0462aacc5bd/: events.jsonl  tasks.jsonl
apps/openlive-gateway/data/openlive-sessions/45191722-3f66-4d66-a443-a8db2a8b49a3/: events.jsonl  tasks.jsonl
apps/openlive-gateway/data/openlive-sessions/4d5ab1bb-cf30-46e7-8396-9e8e927d03f6/: events.jsonl  tasks.jsonl
apps/openlive-gateway/data/openlive-sessions/6415c0c8-c707-466d-87b2-2cc90f232f73/: events.jsonl  tasks.jsonl
apps/openlive-gateway/data/openlive-sessions/6a3c4271-296a-48f0-aa45-4158ccc0ee74/: events.jsonl  tasks.jsonl
apps/openlive-gateway/data/openlive-sessions/713d5cbc-821d-4e46-b4f0-5b35c0ab8f95/: events.jsonl  tasks.jsonl
apps/openlive-gateway/data/openlive-sessions/80abeb2a-6ee0-4c14-ba56-7866b54c286e/: events.jsonl  tasks.jsonl
apps/openlive-gateway/data/openlive-sessions/8bd813ee-6901-45b5-b3bf-0389cd46ce15/: events.jsonl  tasks.jsonl
apps/openlive-gateway/data/openlive-sessions/8db2fba8-7928-42eb-8891-f4bb6f582c94/: events.jsonl  tasks.jsonl
apps/openlive-gateway/data/openlive-sessions/9eaf959b-6101-454c-9cde-dfdf3737dd44/: events.jsonl  tasks.jsonl
apps/openlive-gateway/data/openlive-sessions/a99f1b44-a406-4b5f-8db0-216d8d54607f/: events.jsonl  tasks.jsonl
apps/openlive-gateway/data/openlive-sessions/b0aa6a89-b78f-43c5-8a2d-e2cadd88fa11/: events.jsonl  tasks.jsonl
apps/openlive-gateway/data/openlive-sessions/beca1b45-a483-4433-b638-58f4b0413075/: events.jsonl  tasks.jsonl
apps/openlive-gateway/data/openlive-sessions/c3bc1cad-b0c3-41ef-9801-7e502cd7f5c5/: events.jsonl  tasks.jsonl
apps/openlive-gateway/data/openlive-sessions/c55e1bb5-9c3a-447f-b71f-df7603df1fb1/: events.jsonl  tasks.jsonl
apps/openlive-gateway/data/openlive-sessions/d41a40b9-d04f-44c3-886e-6a70c0dd475a/: events.jsonl  tasks.jsonl
apps/openlive-gateway/data/openlive-sessions/e7c8187c-280f-4ff7-9a82-f21ea454b06e/: events.jsonl  tasks.jsonl
apps/openlive-gateway/src/: config.rs  main.rs  session.rs  session_registry.rs  session_state.rs  transport.rs  webrtc_media.rs  webrtc_session.rs
apps/openlive-gateway/tests/: task_lifecycle.rs
apps/openlive-gateway/web/: agent-client.js  app.js  audio-capture-worklet.js  audio-playback-worklet.js  audio-session.js  audio-utils.js  connection-telemetry.js  conversation-modes.js  custom-instructions.js  emotion-detector.js  index.html  jitter-controller.js  keyboard-shortcuts.js  language.js  live-desk.js  media-capture.js  media-capture.test.mjs  memory-client.js  protocol.js  quota-tracker.js  rnnoise-worklet.js  scenario-suite.js  settings-store.js  setup-store.js  silero-vad-worklet.js  speech-tts.js  speech-utils.js  styles.css  task-orchestrator.js  tool-calls.js  transcript-log.js  tts-client.js  ui-feedback.js  ui.js  visual-cards.js  visual-state.js  voice-profiles.js  voice-visualizer.js
apps/openlive-gateway/web/tests/: keyboard-shortcuts.test.js  protocol.test.js  resume-deduplication.test.js  task-orchestration.test.js  v1.3-parity.test.js
crates/openlive-provider/: Cargo.toml
crates/openlive-provider/src/: agent_class.rs  agent_client.rs  agent_pool.rs  headless_browser.rs  hybrid.rs  knowledge.rs  lib.rs  llm_bridge.rs  llm_catalog.rs  mcp_client.rs  memory_store.rs  mock.rs  moshi.rs  openai_compatible.rs  openai_compatible_streaming.rs  openai_realtime.rs  openai_realtime_wire.rs  pending_actions.rs  piper_tts.rs  pool_jobs.rs  sandbox.rs  session_context.rs  tools.rs  typo.rs  user_profile.rs
crates/openlive-provider/tests/: provider_conformance.rs
crates/openlive-runtime/: Cargo.toml
crates/openlive-runtime/src/: lease.rs  lib.rs  persistence.rs  safety.rs
docs/: architecture-roadmap.md  architecture.md  evaluation.md  (+16 more)
(+15 files in other folders)
