[workspace]
members = [
  "apps/openlive-gateway",
  "crates/openlive-audio",
  "crates/openlive-protocol",
  "crates/openlive-provider",
  "crates/openlive-runtime",
]
resolver = "2"

[workspace.package]
version = "26.7.14"
edition = "2021"
license = "Apache-2.0"
rust-version = "1.83"

[workspace.dependencies]
async-trait = "=0.1.83"
axum = { version = "=0.7.9", features = ["ws"] }
base64 = "=0.22.1"
clap = { version = "=4.5.23", features = ["derive"] }
futures-util = "=0.3.31"
reqwest = { version = "=0.11.27", default-features = false, features = ["json", "multipart", "rustls-tls", "stream"] }
openlive-protocol = { path = "crates/openlive-protocol" }
openlive-audio = { path = "crates/openlive-audio" }
openlive-provider = { path = "crates/openlive-provider" }
openlive-runtime = { path = "crates/openlive-runtime" }
serde = { version = "=1.0.216", features = ["derive"] }
serde_json = "=1.0.134"
thiserror = "=2.0.9"
tokio = { version = "=1.42.0", features = ["full"] }
tokio-util = "=0.7.13"
tokio-tungstenite = { version = "=0.20.1", features = ["rustls-tls-webpki-roots"] }
tower-http = { version = "=0.6.2", features = ["fs", "trace"] }
tracing = "=0.1.41"
tracing-subscriber = { version = "=0.3.19", features = ["env-filter"] }
uuid = { version = "=1.11.0", features = ["serde", "v4", "v5"] }
url = "=2.4.1"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
module_name_repetitions = "allow"
