[workspace]

[package]
name = "openlive-desktop"
version = "26.7.16"
description = "OpenLive desktop application for Windows and macOS"
authors = ["OpenLive"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.83"

[build-dependencies]
tauri-build = { version = "2.1", features = [] }

[dependencies]
tauri = { version = "2.1", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
