[package]
name = "openlive-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
axum.workspace = true
bytes.workspace = true
clap.workspace = true
futures-util.workspace = true
openlive-audio.workspace = true
openlive-protocol.workspace = true
openlive-provider.workspace = true
openlive-runtime.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
webrtc.workspace = true

[dev-dependencies]
openlive-provider = { workspace = true }
tokio-tungstenite.workspace = true

[lints]
workspace = true
